# mlops-air-quality-pipeline

./: .env.example  .gitignore  EC2_COMMANDS.md  MODEL_RESULTS.md  MY_MLFLOW_CONFIG.md  QUICKSTART.md  README.md  main.py  mlflow.db  pyproject.toml
api/: main.py  schemas.py  test_api.py
config/: __init__.py  mlflow_config.py
data/processed/: cleaned_data.csv  split_summary.txt  test.csv  train.csv  validate.csv
docs/: setup_mlflow_remote.md  video_script.md
reports/drift_analysis/: drift_report.html  evidently_performance_drift.html
scripts/: 01_explore_data.py  02_clean_data.py  03_split_data.py  04_h2o_automl.py  05_train_xgboost.py  06_train_random_forest.py  07_train_neural_network.py  08_drift_analysis.py  08_drift_analysis_manual.py  08_drift_analysis_nannyml.py  09_promote_model.py
